Fixes broken frontend issues

--- a/aslo/web/templates/elements/activity_detail_card.html
+++ b/aslo/web/templates/elements/activity_detail_card.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h3 class="card-header pink lighten-1 white-text text-center" style="padding: 15px;"><i class="fa fa-superpowers"></i>{{ _('Activity') }}</h3>
+  <h3 class="card-header pink lighten-1 white-text text-center" style="padding: 15px;"><i class="fa fa-superpowers fa-card-space"></i>{{ _('Activity') }}</h3>
   <div class="card-content text-center">
     <h3 class="card-image-headline"> {{ activity.name.get(lang_code, activity.name.get('en', activity.name.get('en_US', _('No Translation') ))) }}</h3>
     <div class="card-image img-responsive">
