--- a/aslo/web/templates/elements/developer_card.html
+++ b/aslo/web/templates/elements/developer_card.html
@@ -1,5 +1,5 @@
 <div class="card hidden-xs hidden-sm">
-  <h3 class="card-header info-color lighten-1 white-text text-center" style="padding: 15px;"><i class="fa fa-users"></i>{{ _('Developers') }}</h3>
+  <h3 class="card-header info-color lighten-1 white-text text-center" style="padding: 15px;"><i class="fa fa-users fa-card-space"></i>{{ _('Developers') }}</h3>
   <!-- Customized from here https://bootsnipp.com/snippets/featured/carousel-product-cart-slider -->
   <div class="card-body">
     <div class="row">
