--- a/aslo/web/templates/elements/info_card.html
+++ b/aslo/web/templates/elements/info_card.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h3 class="card-header warning-color-dark lighten-1 white-text text-center" style="padding: 15px;"><i class="fa fa-database"></i>{{ _('Details') }}</h3>
+  <h3 class="card-header warning-color-dark lighten-1 white-text text-center" style="padding: 15px;"><i class="fa fa-database fa-card-space"></i>{{ _('Details') }}</h3>
   <div class="card-body">
     <h4 style="padding: 20px;">
       {{ activity.summary.get(lang_code, activity.summary.get('en', activity.summary.get('en_US',_('No Translation')) )) }}
