--- a/aslo/web/templates/elements/screenshot_carousel.html
+++ b/aslo/web/templates/elements/screenshot_carousel.html
@@ -1,5 +1,5 @@
 <div class="card hidden-xs hidden-sm">
-  <h3 class="card-header success-color white-text text-center" style="padding: 15px;"><i class="fa fa-picture-o"></i>{{ _('Screenshots') }}</h3>
+  <h3 class="card-header success-color white-text text-center" style="padding: 15px;"><i class="fa fa-picture-o fa-card-space"></i>{{ _('Screenshots') }}</h3>
   <div class="card-body">
     <div class="row">
       <div class="col-md-12">
